--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   "author": "AyushSaxena",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
-    "mongoose": "^7.0.3"
+    "mongoose": "^7.0.3",
+    "popups": "^1.1.3"
   }
 }
