--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-session": "^1.17.3",
     "flash": "^1.1.0",
     "mongoose": "^7.0.3",
+    "multer": "^1.4.5-lts.1",
     "node-sass": "^8.0.0",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0"
